# registry/api_docs/swagger.json
@@ -1,10 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
+        "description": "HTTP API for the Clay block registry.",
         "title": "Clay Registry",
-        "contact": {
-            "name": "MLOps team",
-            "email": "mlops@pixxel.co.in"
+        "contact": {},
+        "license": {
+            "name": "Apache 2.0",
+            "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
         },
         "version": "1.0"
     },
@@ -43,6 +45,9 @@
             },
             "post": {
                 "description": "publish the specific version of the block.",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -50,9 +55,20 @@
                     "Block"
                 ],
                 "summary": "Publish the block to clay registry",
+                "parameters": [
+                    {
+                        "description": "Block to create",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.CreateBlockRequest"
+                        }
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/http.RegistryResponse-http_CreateBlockResponse"
                         }
@@ -95,7 +111,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/http.RegistryResponse-http_GetBlockByNameResponse"
+                            "$ref": "#/definitions/http.RegistryResponse-http_GetBlocksByNameResponse"
                         }
                     },
                     "400": {
@@ -143,7 +159,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/http.RegistryResponse-http_GetBlockVersion"
+                            "$ref": "#/definitions/http.RegistryResponse-http_GetBlockByNameAndVersion"
                         }
                     },
                     "400": {
@@ -163,10 +179,45 @@
         }
     },
     "definitions": {
+        "http.CreateBlockRequest": {
+            "type": "object",
+            "properties": {
+                "docker_image": {
+                    "type": "string"
+                },
+                "documentation_url": {
+                    "type": "string"
+                },
+                "kind": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "specification": {
+                    "$ref": "#/definitions/http.Specification"
+                },
+                "thumbnail_url": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
         "http.CreateBlockResponse": {
             "type": "object",
             "properties": {
                 "created_at": {
+                    "type": "string"
+                },
+                "docker_image": {
+                    "type": "string"
+                },
+                "documentation_url": {
                     "type": "string"
                 },
                 "id": {
@@ -177,6 +228,9 @@
                 },
                 "specification": {
                     "$ref": "#/definitions/http.Specification"
+                },
+                "thumbnail_url": {
+                    "type": "string"
                 },
                 "type": {
                     "type": "string"
@@ -189,10 +243,16 @@
                 }
             }
         },
-        "http.GetBlockVersion": {
+        "http.GetBlockByNameAndVersion": {
             "type": "object",
             "properties": {
                 "created_at": {
+                    "type": "string"
+                },
+                "docker_image": {
+                    "type": "string"
+                },
+                "documentation_url": {
                     "type": "string"
                 },
                 "id": {
@@ -206,6 +266,9 @@
                 },
                 "specification": {
                     "$ref": "#/definitions/http.Specification"
+                },
+                "thumbnail_url": {
+                    "type": "string"
                 },
                 "type": {
                     "type": "string"
@@ -224,7 +287,16 @@
                 "created_at": {
                     "type": "string"
                 },
+                "docker_image": {
+                    "type": "string"
+                },
+                "documentation_url": {
+                    "type": "string"
+                },
                 "id": {
+                    "type": "string"
+                },
+                "kind": {
                     "type": "string"
                 },
                 "name": {
@@ -232,6 +304,9 @@
                 },
                 "specification": {
                     "$ref": "#/definitions/http.Specification"
+                },
+                "thumbnail_url": {
+                    "type": "string"
                 },
                 "type": {
                     "type": "string"
@@ -264,25 +339,25 @@
                 }
             }
         },
-        "http.RegistryResponse-http_GetBlockByNameResponse": {
+        "http.RegistryResponse-http_GetBlockByNameAndVersion": {
             "type": "object",
             "properties": {
                 "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/http.GetBlockVersion"
-                    }
+                    "$ref": "#/definitions/http.GetBlockByNameAndVersion"
                 },
                 "error": {
                     "type": "string"
                 }
             }
         },
-        "http.RegistryResponse-http_GetBlockVersion": {
+        "http.RegistryResponse-http_GetBlocksByNameResponse": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/http.GetBlockVersion"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/http.GetBlockByNameAndVersion"
+                    }
                 },
                 "error": {
                     "type": "string"
@@ -315,8 +390,11 @@
                 "build": {
                     "type": "object"
                 },
-                "description": {
-                    "type": "string"
+                "env": {
+                    "type": "object"
+                },
+                "gpu": {
+                    "type": "boolean"
                 },
                 "inputs": {
                     "type": "object"
@@ -332,9 +410,6 @@
                     "items": {
                         "type": "string"
                     }
-                },
-                "title": {
-                    "type": "string"
                 }
             }
         }
